# university-staff-manager

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
educ_proc_manager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
educ_proc_manager/migrations/: 0001_initial.py
static/attachments/students/: Правила-1.docx
templates/admin/: base_site.html
templates/educ_proc_manager/: solution.html  students.html  tasks.html
templates/layouts/: base-lms.html  base.html
templates/university_admissions_office/: apply.html  faculty_list.html  info.html  sent.html  students.html
university_admissions_office/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
university_admissions_office/migrations/: 0001_initial.py  0002_remove_student_profession_student_profession.py  0003_alter_student_gender.py  0004_alter_faculty_options_alter_profession_options_and_more.py
university_staff_manager/: asgi.py  settings.py  urls.py  wsgi.py
