[tool.poetry]
name = "university-staff-manager"
version = "0.1.0"
description = ""
authors = ["Peskov Sergey <peskovdev@proton.me>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
